--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,13 @@ categories = ['no-std']
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-bsv-wasm = "1.0.0"
+bsv-wasm = {git = "https://github.com/Firaenix/bsv-wasm.git", branch="master"}
+#bsv-wasm = "1.1.0"
+hex = "0.4.3"
+utf-8 = "0.7.6"
 wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
+regex = "1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.20"
