--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,21 @@ categories = ['no-std']
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-bsv-wasm = {git = "https://github.com/Firaenix/bsv-wasm.git", branch="master"}
-#bsv-wasm = "1.2.0-beta.4"
-hex = "0.4.3"
-utf-8 = "0.7.6"
-wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
-serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
-regex = "1"
-js-sys = "0.3.53"
+anyhow = "1"
 base64 = "0.13.0"
+bsv-wasm = { version = "1.3.4" }
+hex = "0.4.3"
+js-sys = "0.3.53"
+regex = "1"
+reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
+serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
+utf-8 = "0.7.6"
+serde_json = "1"
+wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.20"
+tokio = { version = "1.19.2", features = ["full"]  }
 
 [build-dependencies]
 cc = "1.0"
