--- a/packages/wasm/Cargo.toml
+++ b/packages/wasm/Cargo.toml
@@ -10,7 +10,9 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 #bsv-wasm = { version = "1.3.4", features = ["wasm-bindgen-exports"] }
-bsv-wasm = { path = "../../../bsv-wasm/packages/bsv-wasm" }
+#bsv-wasm = { path = "../../../bsv-wasm/packages/bsv-wasm" }
+bsv-wasm = { git = "https://github.com/Firaenix/bsv-wasm.git", branch = "split-modules" }
+sigil_types = { path = "../../../sigil-sdk/crates/types" }
 js-sys = "0.3.58"
 reqwest = { version = "0.11.0", features = ["json"] }
 serde = { version = "1.0.101", features = ["derive"] }
@@ -19,10 +21,10 @@ serde_json = "1.0.41"
 twetch-sdk = { path =  "../../" }
 wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]  }
 wasm-bindgen-futures = "0.4.31"
+hex = "0.4.3"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.20"
-tokio = { version = "1.19.2", features = ["full"]  }
 
 [dependencies.web-sys]
 version = "0.3.4"
