--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,10 @@ categories = ['no-std']
 sigil-sdk = { git = "https://gitlab+deploy-token-1293088:CbuuHtM8BvVpr6FWnhFP@gitlab.com/twetch/sigil-sdk.git", branch = "master" }
 sigil_types = { git = "https://gitlab+deploy-token-1293088:CbuuHtM8BvVpr6FWnhFP@gitlab.com/twetch/sigil-sdk.git", branch = "master" }
 sigil_store = { git = "https://gitlab+deploy-token-1293088:CbuuHtM8BvVpr6FWnhFP@gitlab.com/twetch/sigil-sdk.git", branch = "master" }
-#sigil-sdk = { path = "../sigil-sdk/" }
-#sigil_types = { path = "../sigil-sdk/crates/types" }
-#sigil_store = { path = "../sigil-sdk/crates/store" }
 async-trait = "0.1.53"
 anyhow = "1"
 base64 = "0.13.0"
-bsv = { git = "https://github.com/Firaenix/bsv-wasm.git", branch = "split-modules" }
+bsv = { git = "https://github.com/Firaenix/bsv-wasm.git", branch = "master" }
 #bsv = { path = "../bsv-wasm" }
 hex = "0.4.3"
 js-sys = "0.3.53"
