--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ reqwest = { version = "0.11.0", features = ["json"] }
 serde = { version = "^1.0", default-features = false, features = ["alloc", "derive"] }
 serde_json = "1"
 utf-8 = "0.7.6"
+#getrandom = { version = "0.2", features = ["js"] }
+#bdk = { version = "0.26.0" }
 
 [dev-dependencies]
 tokio = { version = "1.19.2", features = ["full"]  }
